Wed Aug 31 06:10:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Based_Pointer_Test_Lib.cpp:
          Fixed GCC 4 error
          
Tue Aug 30 14:50:18 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	      * ace/OS_NS_Thread.inl (ACE_Thread_ID):

          Moved small functions out-of-line.  Reduces footprint and
          improves performance slightly.

	      From Patrick Bennett <Patrick.Bennett@inin.com>
	      * ace/OS_NS_Thread.cpp (operator==):
	      * ace/Thread_Manager.inl (operator=-):

	        Corrected thread id/handle equality logic.  It was previously
	        inversed.

Tue Aug 30 18:50:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Based_Pointer_Test.cpp:
          Corrected remap test, some platforms grow the mmap area
          downwards. This fixes bugzilla bug 2226. Thanks to
          <jmegq at radiance dot com> for reporting this and
          Steve Williams <steve at telxio dot com> for validating this.

Tue Aug 30 18:31:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Use -fPIC instead -KPIC

Tue Aug 30 18:20:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Based_Pointer_Test.cpp:
          Some more wchar fixes

Tue Aug 30 18:16:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.{h,cpp}:
          Made the methods id, handle and to_string of the ACE_Thread_Id
          class const. Thanks to Felix Wyss <FelixW at inin dot com>
          for reporting this.

Tue Aug 30 18:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Use icpc as C++ compiler.

Tue Aug 30 14:49:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/README:
          Added description for new ACE_HAS_IPV6_V6ONLY macro.

Tue Aug 30 13:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
