@@ -1,8 +1,13 @@
+Wed Aug 31 07:39:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>
+
+        * ace/Sock_Connect.cpp:
+          Fixed WChar problem.
+
 Wed Aug 31 06:10:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Based_Pointer_Test_Lib.cpp:
           Fixed GCC 4 error
-          
+
 Tue Aug 30 14:50:18 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	      * ace/OS_NS_Thread.inl (ACE_Thread_ID):
